Fix error with profile dropdown z-index

--- a/src/assets/scss/_dashboard.scss
+++ b/src/assets/scss/_dashboard.scss
@@ -138,7 +138,6 @@ $color-orange: #F16C00;
       position: relative;
       margin-left: auto;
       width: 45%;
-      z-index: 5;
 
       @media only screen and (max-width: 1440px) {
         margin-top: 20px;
